Commiting changes to: 	styles - updated menu colors, fixed table max height issues. 	invoices - implemented more of the invoicing functionality. Remain to update the prices and invoice styling. 	invoiceRoutes - fixed issues with name generation. Optimized suboptimal code :D GG WP today

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -136,3 +136,7 @@
     ::-webkit-scrollbar-thumb:hover {
         background: #555; /* Hover effect */
     }
+
+    .max-height-table {
+      max-height: 700px !important;
+    }
