--- a/public/css/style.css
+++ b/public/css/style.css
@@ -167,6 +167,7 @@ input[type=number] {
 
 .popover {
   position: relative; /* Positioned relative to the arrow */
+  
 }
 
 .arrow {
@@ -176,7 +177,7 @@ input[type=number] {
   transform: translateX(-50%) rotate(45deg);
   width: 12px;
   height: 12px;
-  background: #1f2937 ;
+  background: #111827  ;
   z-index: 10; /* Keeps arrow under the popover */
 }
   
@@ -206,7 +207,7 @@ input[type=number] {
 
 /* CSS for the revolve and change color animations */
 .revolve {
-  animation: revolve 0.5s ease-in-out; /* Duration of revolve*/
+  animation: revolve 0.3s ease-in-out; /* Duration of revolve*/
   /* change color here */
 
 }
@@ -216,19 +217,19 @@ input[type=number] {
   0% {
     transform: rotateY(0deg);
     font-weight:normal;
-    color: #4b5563 ; /* Original color */
+    color: #b8b8b8 ; /* Original color */
   }
 
   50% {
-    transform: rotateY(180deg);
+    transform: rotateY(90deg);
     font-weight: bold;
     color: #3b82f6 ; /* Color during animation (e.g., red) */
   }
 
   100% {
-    transform: rotateY(360deg);
+    transform: rotateY(180deg);
     font-weight:normal;
-    color: #4b5563 ; /* Revert to original color */
+    color: #b8b8b8 ; /* Revert to original color */
   }
 }
 
