--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* Toggle button text styling */
 .status-text {
     position: absolute;
