--- a/public/css/output.css
+++ b/public/css/output.css
@@ -714,11 +714,6 @@ video {
   margin-right: 0.5rem;
 }
 
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -767,6 +762,10 @@ video {
 
 .mb-0\.5 {
   margin-bottom: 0.125rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 
 .mb-12 {
@@ -855,14 +854,6 @@ video {
 
 .mt-6 {
   margin-top: 1.5rem;
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
-.mb-1\.5 {
-  margin-bottom: 0.375rem;
 }
 
 .block {
@@ -961,6 +952,10 @@ video {
   height: 100vh;
 }
 
+.max-h-80 {
+  max-height: 20rem;
+}
+
 .max-h-\[100\%\] {
   max-height: 100%;
 }
@@ -977,8 +972,16 @@ video {
   width: 91.666667% !important;
 }
 
+.\!w-28 {
+  width: 7rem !important;
+}
+
 .\!w-32 {
   width: 8rem !important;
+}
+
+.\!w-full {
+  width: 100% !important;
 }
 
 .w-0 {
@@ -1092,10 +1095,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.\!w-1\/3 {
-  width: 33.333333% !important;
 }
 
 .min-w-full {
@@ -1236,16 +1235,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.scale-y-0 {
-  --tw-scale-y: 0;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-y-100 {
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1262,6 +1251,10 @@ video {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+}
+
+.resize {
+  resize: both;
 }
 
 .grid-cols-1 {
@@ -1304,6 +1297,14 @@ video {
   align-items: center;
 }
 
+.\!items-baseline {
+  align-items: baseline !important;
+}
+
+.items-baseline {
+  align-items: baseline;
+}
+
 .justify-start {
   justify-content: flex-start;
 }
@@ -1318,6 +1319,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
 }
 
 .justify-items-end {
@@ -1469,6 +1474,11 @@ video {
   border-color: rgb(35 35 46 / var(--tw-border-opacity));
 }
 
+.border-vred-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(254 127 118 / var(--tw-border-opacity));
+}
+
 .border-vwhite-50 {
   --tw-border-opacity: 1;
   border-color: rgb(236 236 236 / var(--tw-border-opacity));
@@ -1580,6 +1590,10 @@ video {
   --tw-bg-opacity: 0.9;
 }
 
+.\!p-1 {
+  padding: 0.25rem !important;
+}
+
 .\!p-1\.5 {
   padding: 0.375rem !important;
 }
@@ -1614,10 +1628,6 @@ video {
 
 .p-6 {
   padding: 1.5rem;
-}
-
-.\!p-1 {
-  padding: 0.25rem !important;
 }
 
 .px-1\.5 {
@@ -1704,6 +1714,10 @@ video {
   text-align: center;
 }
 
+.text-right {
+  text-align: right;
+}
+
 .align-baseline {
   vertical-align: baseline;
 }
@@ -1716,14 +1730,14 @@ video {
   vertical-align: middle;
 }
 
+.\!text-sm {
+  font-size: 0.875rem !important;
+  line-height: 1.25rem !important;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .text-\[13px\] {
@@ -1831,6 +1845,11 @@ video {
   color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
+.text-neutral-300 {
+  --tw-text-opacity: 1;
+  color: rgb(212 212 212 / var(--tw-text-opacity));
+}
+
 .text-orange-400 {
   --tw-text-opacity: 1;
   color: rgb(251 146 60 / var(--tw-text-opacity));
@@ -1869,6 +1888,11 @@ video {
 .text-vdark-700 {
   --tw-text-opacity: 1;
   color: rgb(26 26 35 / var(--tw-text-opacity));
+}
+
+.text-vred-300 {
+  --tw-text-opacity: 1;
+  color: rgb(254 160 154 / var(--tw-text-opacity));
 }
 
 .text-vred-400 {
@@ -1942,6 +1966,16 @@ video {
   color: rgb(252 252 252 / var(--tw-placeholder-opacity));
 }
 
+.placeholder-vwhite-50::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(236 236 236 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-vwhite-50::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(236 236 236 / var(--tw-placeholder-opacity));
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -2012,12 +2046,6 @@ video {
 
 .transition-colors {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition-opacity {
-  transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -2535,12 +2563,13 @@ input[type='number'] {
 
 .butt-style {
   display: flex;
+  align-items: center;
   border-radius: 0.375rem;
   border-width: 1px;
   border-color: transparent;
   --tw-bg-opacity: 1;
   background-color: rgb(35 35 46 / var(--tw-bg-opacity));
-  padding: 0.75rem;
+  padding: 0.5rem;
   font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 500;
@@ -2893,7 +2922,7 @@ input[type='radio'] {
   width: 0.6rem;
   /* Size of the radio button */
   height: 0.6rem;
-  background-color: #d4d4d4;
+  background-color: #d4d4d400;
   border-radius: 50%;
   outline: solid 2px #d4d4d4;
   outline-offset: 4px;
@@ -2924,11 +2953,6 @@ input[type='radio']:checked {
 .placeholder\:text-vwhite-50::placeholder {
   --tw-text-opacity: 1;
   color: rgb(236 236 236 / var(--tw-text-opacity));
-}
-
-.hover\:border-sky-500:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(14 165 233 / var(--tw-border-opacity));
 }
 
 .hover\:border-slate-100:hover {
@@ -3050,6 +3074,16 @@ input[type='radio']:checked {
   color: rgb(236 236 236 / var(--tw-text-opacity));
 }
 
+.hover\:placeholder-vred-400:hover::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(254 127 118 / var(--tw-placeholder-opacity));
+}
+
+.hover\:placeholder-vred-400:hover::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(254 127 118 / var(--tw-placeholder-opacity));
+}
+
 .hover\:placeholder\:text-vred-400:hover::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(254 127 118 / var(--tw-text-opacity));
@@ -3118,6 +3152,10 @@ input[type='radio']:checked {
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.focus\:outline-vred-400:focus {
+  outline-color: #FE7F76;
 }
 
 .focus\:ring:focus {
@@ -3289,6 +3327,16 @@ input[type='radio']:checked {
   text-decoration-thickness: 2px !important;
 }
 
+.dark\:placeholder-neutral-300:is(.dark *)::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(212 212 212 / var(--tw-placeholder-opacity));
+}
+
+.dark\:placeholder-neutral-300:is(.dark *)::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(212 212 212 / var(--tw-placeholder-opacity));
+}
+
 .dark\:placeholder-vpalered-300:is(.dark *)::-moz-placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(251 243 243 / var(--tw-placeholder-opacity));
@@ -3309,14 +3357,14 @@ input[type='radio']:checked {
   color: rgb(212 212 212 / var(--tw-text-opacity));
 }
 
-.dark\:hover\:border-sky-500:hover:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-color: rgb(14 165 233 / var(--tw-border-opacity));
-}
-
 .dark\:hover\:border-vred-300:hover:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(254 160 154 / var(--tw-border-opacity));
+}
+
+.dark\:hover\:bg-neutral-500:hover:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(115 115 115 / var(--tw-bg-opacity));
 }
 
 .dark\:hover\:bg-neutral-600:hover:is(.dark *) {
@@ -3333,6 +3381,11 @@ input[type='radio']:checked {
   fill: #FEA09A;
 }
 
+.dark\:hover\:text-blue-400:hover:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+
 .dark\:hover\:text-neutral-50:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(250 250 250 / var(--tw-text-opacity));
@@ -3341,11 +3394,6 @@ input[type='radio']:checked {
 .dark\:hover\:text-sky-400:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(56 189 248 / var(--tw-text-opacity));
-}
-
-.dark\:hover\:text-sky-500:hover:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(14 165 233 / var(--tw-text-opacity));
 }
 
 .dark\:hover\:text-vred-300:hover:is(.dark *) {
@@ -3361,6 +3409,16 @@ input[type='radio']:checked {
 .dark\:hover\:text-white:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.dark\:hover\:placeholder-vred-300:hover:is(.dark *)::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(254 160 154 / var(--tw-placeholder-opacity));
+}
+
+.dark\:hover\:placeholder-vred-300:hover:is(.dark *)::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(254 160 154 / var(--tw-placeholder-opacity));
 }
 
 .dark\:hover\:placeholder\:text-vred-400:hover:is(.dark *)::-moz-placeholder {
@@ -3396,6 +3454,10 @@ input[type='radio']:checked {
 .dark\:focus\:outline-none:focus:is(.dark *) {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.dark\:focus\:outline-vred-300:focus:is(.dark *) {
+  outline-color: #FEA09A;
 }
 
 .dark\:active\:border-vred-300:active:is(.dark *) {
